# weather

./: .gitignore  CMakeLists.txt  FetchURL.cpp  FetchURL.hpp  FileReader.hpp  GetTime.cpp  GetTime.hpp  README.md  barf.json  inja.hpp  location.cpp  location.h  location.hpp  main.cpp  weather.cpp  weather.h  weather.hpp  weather.kdev4  weather_test.cpp
grpc/: doit.sh  ultimateq.grpc.pb.cc  ultimateq.grpc.pb.h  ultimateq.pb.cc  ultimateq.pb.h
test/: FileReaderTest.cpp  GetTimeTest.cpp  weather_test.cpp
test/input/: snek.txt
